[Fix]Content overflow due to wrong JS code Also removed deprecated code from CSS used to hidden the scrollbars on internet explorer.

--- a/public/css/formate.css
+++ b/public/css/formate.css
@@ -334,7 +334,6 @@ h1
 #content {
 	position:absolute;
 	left:190px;
-	scrollbars:none;
 	overflow:auto;
 	width:80%;
 	height:100%;
@@ -343,7 +342,6 @@ h1
 	height:66px;
 	position:absolute;
 	left:190px;
-	scrollbars:none;
 	overflow:visible;
 	width:80%;
 }
